--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>African Youth Humanitarian Association</title>
+<title>African Youths Humanitarian Association</title>
 <style>
 body {
 font-family: Arial, sans-serif;
