--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>African Youths Humanitarian Association</title>
+<title>African Youths Humanitarian Association (AYHA)</title>
 <style>
 body {
 font-family: Arial, sans-serif;
@@ -117,8 +117,8 @@ padding-left: 18px;
 </head>
 <body>
 <header id="top">
-<h1>African Youth Humanitarian Association</h1>
-<p>Empowering Youth • Building Communities • Creating Impact</p>
+<h1>African Youths Humanitarian Association</h1>
+<p>Empowering Youths • Building Communities • Creating Impact</p>
 </header>
 
 <nav>
@@ -137,9 +137,9 @@ padding-left: 18px;
 <div class="card" id="about">
 <h2>Welcome to AYHA</h2>
 <p>
-African Youth Humanitarian Association (AYHA) is a youth-led organization
-focused on empowering young people across Africa through education,
-leadership development, and community support initiatives.
+African Youths Humanitarian Association (AYHA) is a youths-led organization
+focused on empowering young people across Africa and Africans in the diaspora through education,
+leadership development, and community support initiatives. We promote Love, Peace And Unity amongst Africans Worldwide.
 </p>
 </div>
 
@@ -149,7 +149,7 @@ leadership development, and community support initiatives.
 <p>
 To support African youths and vulnerable communities with resources,
 training, and opportunities to grow and thrive, while promoting
-humanitarian values and youth participation.
+humanitarian values and youths participation.
 </p>
 
 <h3>Our Focus Areas</h3>
@@ -157,7 +157,7 @@ humanitarian values and youth participation.
 <li>Youth empowerment and leadership</li>
 <li>Education and skills development</li>
 <li>Community outreach and humanitarian support</li>
-<li>Advocacy for youth rights and inclusion</li>
+<li>Advocacy for youths rights and inclusion</li>
 </ul>
 </div>
 
@@ -228,7 +228,7 @@ makes a real difference.
 <div class="donate-method">
 <h3>Bank Transfer</h3>
 <p>
-<strong>Account Name:</strong> African Youth Humanitarian Association<br>
+<strong>Account Name:</strong> African Youths Humanitarian Association<br>
 <strong>Bank Name:</strong> Your Bank Name Here<br>
 <strong>Account Number / IBAN:</strong> 000000000000<br>
 <strong>SWIFT / BIC:</strong> XXXXXXXX
@@ -301,7 +301,7 @@ Replace <code>#</code> with your real Stripe / payment link when ready.
 <div class="card" id="socials">
 <h2>Follow Us on Social Media</h2>
 <p>
-Stay connected with the African Youth Humanitarian Association (AYHA)
+Stay connected with the African Youths Humanitarian Association (AYHA)
 across our social media platforms for updates, projects, outreach,
 and volunteer opportunities.
 </p>
