--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>African Youths Humanitarian Association</title>
+                  AYHA
 
 <!-- SEO -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
