--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ Follow us on TikTok</a>
 <div class="card" id="contact-last">
 <h2>Contact Us</h2>
 
-<p><strong>Main Email (General + PayPal):</strong> ayhassociation@gmail.com</p>
+<p><strong>Main Email (General):</strong> ayhassociation@gmail.com</p>
 <p><strong>Applications Email:</strong> ayhainfo.org@gmail.com</p>
 <p><strong>Phone / WhatsApp:</strong> +39 351 077 2822</p>
 
