--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="google-site-verification" content="rXUPWu3xzUPQT2y0yJD3uUMbXWseQvks-1bwrwPejgY" />
 <meta charset="UTF-8" />
 <title>African Youths Humanitarian Association</title>
 
