--- a/index.html
+++ b/index.html
@@ -3,7 +3,60 @@
 <head>
 <meta name="google-site-verification" content="rXUPWu3xzUPQT2y0yJD3uUMbXWseQvks-1bwrwPejgY" />
 <meta charset="UTF-8" />
-<title>African Youths Humanitarian Association</title>
+
+<title>African Youths Humanitarian Association (AYHA)</title>
+
+<!-- Basic SEO -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="African Youths Humanitarian Association (AYHA) is a youth-led humanitarian organisation empowering African Youths through education, humanitarian support, leadership development and community projects across Africa." />
+<meta name="keywords" content="African Youths Humanitarian Association, AYHA, African Youths, Youths Empowerment, Humanitarian organisation, Africa, Youths leadership, Community projects, Charity, Non-profit" />
+<meta name="author" content="African Youths Humanitarian Association (AYHA)" />
+<meta name="robots" content="index, follow" />
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://ayhaofficial-org.github.io/" />
+
+<!-- Open Graph (for Facebook, WhatsApp, etc.) -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://ayhaofficial-org.github.io/" />
+<meta property="og:title" content="African Youths Humanitarian Association (AYHA)" />
+<meta property="og:description" content="AYHA is a youth-led humanitarian organisation uniting African Youths to empower communities, support the vulnerable and build a better Africa." />
+<!-- If you later upload a nice banner image, put its full URL here -->
+<meta property="og:image" content="https://ayhaofficial-org.github.io/images/ayha-banner.jpg" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="African Youths Humanitarian Association (AYHA)" />
+<meta name="twitter:description" content="African Youths Humanitarian Association (AYHA) – empowering African Youths, supporting communities, building a united Africa." />
+<meta name="twitter:image" content="https://ayhaofficial-org.github.io/images/ayha-banner.jpg" />
+
+<!-- Structured data (Schema.org) -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "Organization",
+"name": "African Youths Humanitarian Association (AYHA)",
+"url": "https://ayhaofficial-org.github.io/",
+"logo": "https://ayhaofficial-org.github.io/images/ayha-logo.png",
+"description": "African Youths Humanitarian Association (AYHA) is a youth-led humanitarian organisation uniting African Youths to empower communities across Africa.",
+"foundingDate": "2024",
+"founder": {
+"@type": "Person",
+"name": "African Youths Humanitarian Association Founders"
+},
+"contactPoint": [{
+"@type": "ContactPoint",
+"contactType": "General contact",
+"email": "ayhainfo.org@gmail.com",
+"telephone": "+39 351 077 2822"
+}],
+"sameAs": [
+"https://www.facebook.com/share/17tUuRzzjs/?mibextid=wwXIfr",
+"https://youtube.com/@africayouth2024?si=VWId15UWjY1EnNd-",
+"https://www.tiktok.com/@africayouthshumanitaian?_r=1&_t=ZN-91nchJHDb1y"
+]
+}
+</script>
 
 <!-- SEO -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
